tests/design/errors/views/lib.lib.js



function view(){
    provides('foo','bar');
}

module.exports = {view}